Fix todo list input causing horizontal scroll
Fixes #130

--- a/src/app/scss/_todolist.scss
+++ b/src/app/scss/_todolist.scss
@@ -13,13 +13,15 @@
 			visibility: visible;
 		}
 
-		display: block;
+		display: flex;
 		list-style: none;
 		margin: 0;
-		padding: 0.25rem 0.5rem;
+		padding: 0 0 0.25em 0;
+		gap: 0.25em;
 
 		input[type="checkbox"] {
-			margin-right: 0.75em;
+			flex-shrink: 1;
+			margin-right: 0.5em;
 
 			&:checked + span {
 				&, input {
@@ -34,7 +36,12 @@
 		}
 
 		input[type="text"], .input-auto > .backing {
+			flex-grow: 1;
 			font-size: 120%;
+		}
+
+		.backing {
+			@include line-clamp(1);
 		}
 	}
 }
